<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.teacher_registration.TeacherRegistration">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />
    </android.support.design.widget.AppBarLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@+id/appbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/dummy_profile" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/profile_image"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/teacher_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#14000000"
            android:theme="@style/EditTextTheme">

            <EditText
                android:id="@+id/editText_name"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@android:color/transparent"
                android:hint="@string/your_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textCapWords"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:textColor="@color/white" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/teacher_designation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/teacher_name"
            android:layout_marginTop="10dp"
            android:background="#14000000"
            android:focusable="true"
            android:gravity="center"
            android:theme="@style/EditTextTheme">

            <EditText
                android:id="@+id/editText_designation"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@android:color/transparent"
                android:hint="@string/your_designation"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textCapWords"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:textColor="@color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/teacher_department"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/teacher_designation"
            android:layout_marginTop="10dp"
            android:background="#14000000"
            android:theme="@style/EditTextTheme">

            <EditText
                android:id="@+id/editText_department"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@android:color/transparent"
                android:hint="@string/department"
                android:imeOptions="actionDone"
                android:inputType="textPersonName|textCapWords"
                android:maxLines="1"
                android:textColorHint="@color/hint_color"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:textColor="@color/white" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/finger_print"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_below="@+id/teacher_department"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:src="@drawable/finger_print" />
    </RelativeLayout>

</RelativeLayout>